[package]
name = "agentchain-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentchain-node"
path = "src/main.rs"

[dependencies]
# Node infrastructure
sc-cli                  = { workspace = true }
sc-client-api           = { workspace = true }
sc-consensus            = { workspace = true }
sc-consensus-aura       = { workspace = true }
sc-consensus-grandpa    = { workspace = true }
sc-executor             = { workspace = true }
sc-network              = { workspace = true }
sc-offchain             = { workspace = true }
sc-rpc-api              = { workspace = true }
sc-service              = { workspace = true }
sc-telemetry            = { workspace = true }
sc-transaction-pool     = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-basic-authorship     = { workspace = true }
sc-keystore             = { workspace = true }

# Runtime and primitives
agentchain-runtime      = { workspace = true }
agentchain-primitives   = { workspace = true, features = ["std"] }
frame-support           = { workspace = true, features = ["std"] }

# Substrate primitives (std)
sp-core                = { workspace = true, features = ["std"] }
sp-runtime             = { workspace = true, features = ["std"] }
sp-io                  = { workspace = true, features = ["std"] }
sp-api                 = { workspace = true, features = ["std"] }
sp-consensus-aura      = { workspace = true, features = ["std"] }
sp-consensus-grandpa   = { workspace = true, features = ["std"] }
sp-inherents           = { workspace = true, features = ["std"] }
sp-block-builder       = { workspace = true, features = ["std"] }
sp-keyring             = { workspace = true }

# Frame RPC
substrate-frame-rpc-system     = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

# Additional node crates
sc-rpc                  = { workspace = true }
sp-blockchain           = { workspace = true }
sp-timestamp            = { workspace = true }

# Third-party
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
jsonrpsee  = { workspace = true }
futures    = { workspace = true }
log        = { version = "0.4" }

[features]
default = []
runtime-benchmarks = ["agentchain-runtime/runtime-benchmarks"]
try-runtime = ["agentchain-runtime/try-runtime"]
