[package]
name = "pallet-constitution"
version.workspace = true
edition.workspace = true

[dependencies]
agentchain-primitives = { workspace = true }
frame-support         = { workspace = true }
frame-system          = { workspace = true }
sp-core               = { workspace = true }
sp-runtime            = { workspace = true }
sp-io                 = { workspace = true }
codec                 = { workspace = true }
scale-info            = { workspace = true }
log                   = { workspace = true }

[dev-dependencies]
sp-io      = { workspace = true, features = ["std"] }
sp-core    = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "agentchain-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "codec/std",
    "scale-info/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
